--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -139,15 +139,16 @@ TBD
 \input{copilot} 
 \input{spec} 
 \input{observ}
-\input{FT} 
 \input{noninterference} 
 \input{trace}
+\input{FT} 
 \input{verispec}
 \input{codecorrect}
 \input{steer}
 %\input{predictive}
 %\input{security}
-\input{Related}
+%\input{Related}
+\input{opportunities} 
 \input{conclusion} 
 
 \bibliographystyle{plain}
