--- a/ISoLA16/codecorrect.tex
+++ b/ISoLA16/codecorrect.tex
@@ -14,9 +14,7 @@ buffer and floating point overflows.
 
 \paragraph{Copilot Approach}    
 The  small  Copilot interpreter can be seen as providing an executable
-operational semantics for the Copilot language. The monitor synthesis
-process software is more complicated  than the interpreter and
-increasing the chance an error will occur.  As reported
+operational semantics for the Copilot language.  As reported
 in~\cite{pike-icfp-12} , our first efforts in monitor
 synthesis assurance were  to support  regression tests for the semantics
 of the EDSL using Haskell's QuickCheck~\cite{qc} property testing
@@ -30,18 +28,18 @@ differences in how GHC and Haskell implemented floating point numbers,
 without either violating the IEEE floating point standard. 
 
 
-In order to gain greater assurance of the correctness copilot monitor
-synthesis, we recently begin leveraging several static analysis tools
-to provide a more rigorous footing to the assurance of Copilot
-monitors.   The process of translating a specification into a monitor
+Recent work  leverages light-weight verification tools for monitor
+synthesis assurance.   The process of translating a specification into a monitor
 transforms an AST of the ``core'' language representation into an SBV
-AST.  We then use SBV's C code generation capabilities to create
-executable C code.  To facilitate monitor verification, Copilot now
+AST.  SBV's C code generation capabilities are used to generate 
+executable C code.  To facilitate monitor verification, Copilot 
 produces Hoare-logic style contracts directly from the Copilot core
 representation independent of the monitor generation process. The
 contracts are written in the ANSI C Specification Language
 (ACSL)~\cite{baudin09acsl}, an assertion language for specifying
-behavioral properties of C programs in first-order logic.
+behavioral properties of C programs in first-order logic.  Each file has a contract  with an ACSL 
+post-condition that basically specifying the subexpression of the core
+AST representation that the function should  implement. 
 Frama-C's~\cite{framac} WP deductive verification engine is employed
 to prove that the code does indeed satisfy the contract. Deductive
 verification tools have evolved quite a bit recently, but scalability
@@ -49,24 +47,15 @@ is still an issue.  That the translation process creates separate C
 functions for subexpressions of a large expression makes the
 verification tractable. 
 
-The translation processes that transforms  a specification  into C monitors will create a number small files
-that get linked together. Each file has a contract  with an ACSL 
-post-condition that basically specifying the subexpression of the core
-AST representation that this function should be  implementing. 
-The proofs in Section~\ref{ sec:verispec}  about correctness of the
-specification are carried out on the reified specification in Copilot
-core. Here we are providing evidence that the monitors do indeed
-implement that AST giving confidence that the monitor does indeed
-satisfy the correct specification. 
 
-In the case of one of the functions implementing
-the horizontal separation below, the annotated code is given as 
+An example of an annotated monitor C function follows: 
 
 %\begin{lstlisting}[frame=single, language=C]
-\begin{Verbatim}[fontsize=\tiny]
+\begin{Verbatim}[fontsize=\scriptsize]
 /*@
  assigns \ nothing;
- ensures \ result == (((ext_ident_double_8) - (((ext_minimal_horizontal_separation) * (ext_minimal_horizontal_separation)))));
+ ensures \ result == (((ext_ident_double_8) - (((ext_minimal_horizontal_separation) *
+                                 (ext_minimal_horizontal_separation)))));
 */
 SDouble ext_sqrt_9_arg0(const SDouble ext_ident_double_8,
        const SDouble ext_ownship_position_x, const SDouble ext_intruder_position_x,
@@ -91,11 +80,13 @@ interpretation value analysis plug exposed the need to ensure that
 there are no floating point infinite values  or not a number (NaN).
 In the case of the \texttt{ext\_sqrt\_9\_arg0} function, the value
 analysis produces warnings:
-\begin{Verbatim}[fontsize=\tiny]
-\ext_sqrt_9_arg0.c:41:[kernel] warning: non-finite double value ([-1.79769313486e+308 .. 1.79769313486e+308]):
+\begin{Verbatim}[fontsize=\scriptsize]
+\ext_sqrt_9_arg0.c:41:[kernel] warning: non-finite double 
+                            value ([-1.79769313486e+308 .. 1.79769313486e+308]):
          assert \is_finite((double)(s5*s5));
-ext_sqrt_9_arg0.c:42:[kernel] warning: non-finite double value ([-1.79769313486e+308 .. 1.79769313486e+308]):
-                  assert \is_finite((double)(s0-s6));
+ext_sqrt_9_arg0.c:42:[kernel] warning: non-finite double
+                           value ([-1.79769313486e+308 .. 1.79769313486e+308]):
+         assert \is_finite((double)(s0-s6));
 ext_sqrt_9_arg0.c:30:[value] Function ext_sqrt_9_arg0: postcondition got status unknown.
 \end{Verbatim}
 indicating that steps must be taken to ensure that the two floating
@@ -113,19 +104,11 @@ with using the verified Compcert compiler~\cite{leroy} to generate
 binaries.  Unfortunately, Compcert does not yet target many of the
 processors used in our experiments limiting its utility.
 
-\paragraph{Opportunities} Applying static analysis tools makes so much
-sense that it should be de rigueur. For high-assurance RV monitors,
-the case is strengthened when evidence from static analysis can be
-applied to certification ~\cite{DO333}.  Copilot is not unique in
-generating constant time and constant time monitor, thus tools
-targeting memory leaks are not particularly useful. The application
-areas targeted by Copilot, floating point arithmetic is a source of
-problems that is readily amenable to static analysis.  Other
-application domains such as security or low power devices offer many
-possibilities for static analysis.  In Copilot, we applied deductive
-verification to verify the correctness of the translation from
-specification to monitor code.  Monitors have many characteristics
-that  make automatic proofs tractable, but  the monitor synthesis must
-generate code that  suitable for the tool being used. This raises the
-opportunity for close collaboration between RV researchers and tool
-builders. 
+
+
+
+%The proofs in Section~\ref{sec:verispec}  about correctness of the
+%specification are carried out on the reified specification in Copilot
+%core. Here we are providing evidence that the monitors do indeed
+%implement that AST giving confidence that the monitor does indeed
+%satisfy the correct specification. 
